--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
 	<div id="header" class="mainHeader">
 		<table style="width: 100%; background-color: rgb(247, 9, 128);">
 			<tr>
-				<td><img src="images/love.jpg" height=auto width=auto></td>
-				<!-- <td><div class="center">Happiest Birthday, Susmit&aacute;</div></td> -->
-				<td><div class="center">Happiest Birthday, dear yo&uacute;</div></td>
-				<td><img src="images/love.jpg" height=auto width=auto></td>
+				<td><img src="images/love.jpg" height=230 width=250></td>
+				<td><div class="center">Happiest Birthday, my babyyy&yacute;</div></td>
+				<td><img src="images/love.jpg" height=250 width=250></td>
 			</tr>
 		</table>
 	</div>
@@ -66,13 +65,13 @@
 			<table style="width: 100%;">
 				<tr>
 					<td><img src="images/poem.png" height="700" width="600"></td>
-					<td><img src="images/susmita.jpg" height="700" width="500"></td>
+					<td><img src="images/annie.jpg" height="700" width="500"></td>
 				</tr>
 			</table>
 			<br><br>
 			<div class="cursiveText">I've never told you how I secretly wish none of our calls would ever end,</div><br>
-			<div class="cursiveText">Just so that I can keep listening to you for a little longer <span style="font-size:200%;color:red;">&hearts;</span></div><br>
-			<p class="p1">Stay the gorgeous woman that you are</p>
+			<div class="cursiveText"><span style="font-size:200%;color:red;">&hearts;</span> Just so that I can keep looking at you for a little longer <span style="font-size:200%;color:red;">&hearts;</span></div><br>
+			<p class="p1">Stay the gorgeous woman that you are!</p>
 			<img src="images/coffee.png" height="450" width="500"><br>
 		</div>
 	</div>
