--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				</tr>
 			</table>
 			<br><br>
-			<div class="cursiveText">I've never told you how I secretly wish none of our calls would ever end,</div><br>
+			<div class="cursiveText"><span style="font-size:200%;color:red;">&hearts;</span> I've never told you how I secretly wish none of our video calls would ever end, <span style="font-size:200%;color:red;">&hearts;</span></div><br>
 			<div class="cursiveText"><span style="font-size:200%;color:red;">&hearts;</span> Just so that I can keep looking at you for a little longer <span style="font-size:200%;color:red;">&hearts;</span></div><br>
 			<p class="p1">Stay the gorgeous woman that you are!</p>
 			<img src="images/flowers.jpg" height="450" width="500"><br>
